@@ -10,6 +10,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Data
@@ -24,15 +25,19 @@ public class User implements  UserDetails {
     private Long id;
     private  String firstname;
     private String lastname;
+    @Column(name = "email", unique = true, nullable = false)
     private  String email;
     private String password;
+
+    @Column(unique = true)
+    private String username;
     @Enumerated(EnumType.STRING)
     private Role role;
 
-    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        return Collections.singletonList(new SimpleGrantedAuthority(role.name()));
     }
+
 
     @Override
     public String getPassword() {
@@ -43,7 +48,6 @@ public class User implements  UserDetails {
     public String getUsername() {
         return email;
     }
-
     @Override
     public boolean isAccountNonExpired() {
         return true;
